[package]
name = "runas"
version = "0.3.1"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>", "SonnyX <randy@vonderweide.nl>"]
keywords = ["runas", "sudo", "elevate", "elevated"]
description = "Run a command as root (sudo)"
homepage = "https://github.com/mitsuhiko/rust-runas"
documentation = "http://mitsuhiko.github.io/rust-runas/"
license = "BSD-3-Clause"
readme = "README.md"
build = "build.rs"
edition = "2018"

[target.'cfg(target_os="linux")'.dependencies]
which = "4.0"

[target.'cfg(target_os="windows")'.dependencies]
winapi = { version = "0.3", features = ["combaseapi", "objbase", "shellapi", "winuser", "minwindef"]}

[build-dependencies]
cc = "1.0"
